--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,7 +157,7 @@ hr.divider {
   padding: 0;
   margin-top: 249px;
   width: 100%;
-  flex-direction: column;
+  flex-direction: row;
 }
 #header .menu nav ul li {
   padding: 14px 0;
@@ -260,6 +260,78 @@ hr.divider {
 .open-menu #header .logo {
   right: 87px;
   width: 120px;
+}
+
+@media (min-width: 1200px) {
+  .open-menu {
+    overflow: initial;
+  }
+
+  .logo {
+    width: 100px;
+    top: 17px;
+    right: calc(100vw - 150px);
+  }
+
+  #header {
+    height: 100px;
+  }
+  #header .italy {
+    top: 100px;
+  }
+  #header .logo {
+    width: 100px;
+    top: 17px;
+    right: calc(100vw - 150px);
+  }
+  #header #btn-open, #header #btn-close {
+    display: none;
+  }
+  #header .menu {
+    right: initial;
+    position: static;
+    background-color: initial;
+    width: 100%;
+    height: 100px;
+    flex-direction: row;
+    margin-left: 250px;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 0;
+  }
+  #header .menu .btn-register {
+    margin: 0;
+    margin-right: 30px;
+    width: 200px;
+  }
+  #header .menu nav {
+    width: 100%;
+  }
+  #header .menu nav ul {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 0;
+  }
+  #header .menu nav li a {
+    font-size: 18px;
+    min-width: 120px;
+    padding: 10px 0;
+    text-align: center;
+  }
+  #header .menu nav li a:hover {
+    color: var(--black);
+  }
+  #header .menu footer {
+    width: initial;
+    justify-content: center;
+  }
+  #header .menu footer hr {
+    margin: 30px;
+  }
+  #header .menu footer > div {
+    height: 100px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
