--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,7 +110,7 @@ hr.divider {
   position: absolute;
   top: 60px;
   background-color: var(--white);
-  border: none;
+  box-decoration-break: none;
   border-top: var(--green) 6px solid;
   border-bottom: var(--red) 6px solid;
   height: 18px;
@@ -149,6 +149,12 @@ hr.divider {
 #header .menu.logged nav ul li.hide-guest {
   display: flex;
 }
+#header .menu.logged .footer > div {
+  display: flex;
+}
+#header .menu.logged .footer > a.btn-register {
+  display: none;
+}
 #header .menu nav {
   flex-direction: column;
 }
@@ -157,7 +163,7 @@ hr.divider {
   padding: 0;
   margin-top: 249px;
   width: 100%;
-  flex-direction: row;
+  flex-direction: column;
 }
 #header .menu nav ul li {
   padding: 14px 0;
@@ -172,7 +178,7 @@ hr.divider {
   display: none;
 }
 #header .menu nav ul li hr {
-  margin: 15px;
+  margin: 15px 0;
 }
 #header .menu .footer {
   flex-direction: column;
@@ -191,7 +197,7 @@ hr.divider {
 #header .menu .footer > div picture img {
   width: 40px;
   height: 40px;
-  border-radius: 50;
+  border-radius: 50%;
 }
 #header .menu .footer > div > div {
   flex-direction: column;
@@ -221,14 +227,22 @@ hr.divider {
   text-decoration: none;
   outline: none;
   cursor: pointer;
+  border-radius: 6px;
+  background: transparent;
+  color: var(--black);
   background-color: var(--green);
   color: var(--white);
-  border-radius: 6px;
+}
+#header .menu .btn-register:hover {
+  background-color: var(--black-10);
+}
+#header .menu .btn-register:active {
+  background-color: var(--black-75);
 }
 #header .menu .btn-register:hover {
   background-color: var(--green-hover);
 }
-#header .menu .btn-registeractive {
+#header .menu .btn-register:active {
   background-color: var(--green-active);
 }
 #header button {
@@ -249,7 +263,7 @@ hr.divider {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vh;
+  width: 100%;
   height: 100vh;
   background-color: var(--dark-1);
   z-index: 4;
@@ -266,8 +280,10 @@ hr.divider {
   .open-menu {
     overflow: initial;
   }
-
-  .logo {
+  .open-menu #header .overlay {
+    display: none;
+  }
+  .open-menu #header .logo {
     width: 100px;
     top: 17px;
     right: calc(100vw - 150px);
@@ -294,7 +310,7 @@ hr.divider {
     width: 100%;
     height: 100px;
     flex-direction: row;
-    margin-left: 250px;
+    margin-left: 150px;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 0;
@@ -313,23 +329,23 @@ hr.divider {
     align-items: center;
     margin-top: 0;
   }
-  #header .menu nav li a {
+  #header .menu nav ul li a {
     font-size: 18px;
     min-width: 120px;
     padding: 10px 0;
     text-align: center;
   }
-  #header .menu nav li a:hover {
+  #header .menu nav ul li a:hover {
     color: var(--black);
   }
-  #header .menu footer {
+  #header .menu .footer {
     width: initial;
     justify-content: center;
   }
-  #header .menu footer hr {
-    margin: 30px;
+  #header .menu .footer hr {
+    display: none;
   }
-  #header .menu footer > div {
+  #header .menu .footer > div {
     height: 100px;
   }
 }
