--- a/assets/sass/mixin.scss
+++ b/assets/sass/mixin.scss
@@ -13,7 +13,7 @@
     outline: none;
     cursor: pointer;
     
-    border-radius: 6px;
+    border-radius: var(--border-radius);
     background: transparent;
     color: var(--black);
     &:hover {
