Ferrari Dia 01 - Ao Vivo

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,4 +8,8 @@
 @import "calendar.scss";
 @import "header.scss";
 @import "footer.scss";
+@import "alert.scss";
+@import "home";
+@import "services.scss";
+@import "contact.scss";
 
