--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1155,6 +1155,40 @@ header.page-title hr {
   color: var(--gray-0);
 }
 
+@media (min-width: 768px) {
+  #service h2 {
+    font-size: 60px;
+  }
+  #service h2 small {
+    font-size: 35px;
+  }
+  #service > div {
+    flex-direction: column-reverse;
+  }
+  #service > div .icons {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  #service > div .icons figure {
+    margin: calc(5 * var(--space)) 0;
+  }
+  #service > div .icons figure img {
+    width: 150px;
+  }
+  #service > div a {
+    width: 200px;
+    margin: calc(3 * var(--space)) auto;
+    text-align: center;
+  }
+}
+@media (min-width: 992px) {
+  #service h2 {
+    font-size: 60px;
+  }
+  #service h2 small {
+    font-size: 35px;
+  }
+}
 #contact {
   flex-direction: column;
 }
@@ -1211,6 +1245,127 @@ header.page-title hr {
 #contact .contacts li ptitle {
   font-weight: 600;
   font-size: 24px;
+}
+
+@media (min-width: 992px) {
+  #contact > h2 {
+    font-size: 60px;
+  }
+  #contact > section {
+    flex-direction: row;
+  }
+  #contact > section form, #contact > section #map {
+    flex: 1;
+  }
+  #contact > section form {
+    max-width: unset;
+  }
+  #contact > section form textarea {
+    min-height: 160px;
+    resize: vertical;
+  }
+  #contact > section #map {
+    margin-left: 0%;
+    height: 570px;
+  }
+  #contact .contacts {
+    flex-direction: row;
+  }
+  #contact .contacts li + li {
+    margin-left: var(--space);
+  }
+}
+@media (min-width: 1200px) {
+  #contact > section form textarea {
+    min-height: 245px;
+  }
+}
+#auth {
+  min-width: 320px;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+#auth > section {
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+#auth > section a {
+  display: contents;
+}
+#auth > section a img {
+  position: absolute;
+  width: 100px;
+  top: 40px;
+  z-index: 1;
+}
+#auth > section form {
+  margin-top: 170px;
+  width: 100%;
+  max-width: unset;
+}
+#auth > section form.hide {
+  display: none;
+}
+#auth > section form h1 {
+  text-align: center;
+  color: var(--green);
+  font-size: 28px;
+  font-weight: 600;
+  margin: var(--space) auto;
+}
+#auth > section form hr {
+  width: 68px;
+  border: none;
+  border-top: 4px;
+  border-bottom: var(--space);
+}
+#auth > section form .actions {
+  justify-content: space-between;
+  align-items: center;
+}
+#auth > section form .actions > div {
+  flex-direction: column;
+}
+#auth > section form .actions > div a {
+  display: flex;
+}
+#auth > section form .actions .link {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--dark-0);
+  text-decoration: none;
+}
+#auth > section form .actions .link:hover {
+  color: var(--gray-11);
+}
+#auth > section form .actions .link:active {
+  color: var(--black);
+}
+#auth > section p {
+  color: var(--gray-9);
+  font-size: 16px;
+}
+
+@media (min-width: 768px) {
+  #auth > section {
+    width: 500px;
+    height: initial;
+  }
+  #auth > section a img {
+    top: 125px;
+  }
+  #auth > section form {
+    border: var(--gray--8) 1px solid;
+    border-radius: calc(2* var(--border-radius));
+    width: 100%;
+    padding: 50px;
+    padding-top: 100;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
