--- a/assets/sass/default.scss
+++ b/assets/sass/default.scss
@@ -6,7 +6,7 @@
     font-style: normal;
     font-weight: 400;
 }
-body, div, article, aside, header, main, footer, nav, ul, ol, button, figure, picture, section, li,  {
+body, div, article, aside, header, main, footer, nav, ul, ol, form, button, figure, picture, section, li,  {
     display: flex;
 }
 body {
