--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,7 @@
 @import "fonts.scss";
 @import "variables.scss";
 @import "default.scss";
+@import "loading.scss";
 @import "mixin.scss";
 @import "toast.scss";
 @import "form.scss";
@@ -13,4 +14,6 @@
 @import "services.scss";
 @import "contact.scss";
 @import "auth.scss";
+@import "change-photo.scss";
+@import "change-password.scss";
 
