--- a/assets/sass/auth.scss
+++ b/assets/sass/auth.scss
@@ -6,6 +6,7 @@
     align-items: center;
     > section {
         flex-direction: column;
+        align-items: center;
         justify-content: space-between;
         position: relative;
         width: 100%;
@@ -29,6 +30,18 @@
             &.hide {
                 display: none;
             }
+            .message {
+                align-items: center;
+                justify-content: center;
+                img {
+                    margin-right: 5px;
+                }
+                span {
+                    font-size: 14px;
+                    font-weight: 600;
+                    color: var(--dark-0);
+                }
+            }
             h1 {
                 text-align: center;
                 color: var(--green);
@@ -39,9 +52,10 @@
             hr {
                 width: 68px;
                 border: none;
-                border-top: 4px;
-                border-bottom: var(--space);
+                border-top: 4px solid var(--red);                
+                margin-bottom: var(--space);
             }
+
             .actions {
                 justify-content: space-between;
                 align-items: center;
@@ -65,6 +79,8 @@
                     }
                 }
             }
+            
+            
         }
         
         p {
@@ -73,7 +89,7 @@
         }
     }
 }
-@media (min-width: 768px) {
+@media (min-width: 500px) {
     #auth {
         > section {
             width: 500px;
@@ -85,11 +101,12 @@
                 }
             }
             form {
-                border: var(--gray--8) 1px solid;
+                border: var(--gray-8) 1px solid;
                 border-radius:  calc(2* var(--border-radius));
                 width: 100%;
                 padding: 50px;
-                padding-top: 100;
+                padding-top: 100px;
+               
             }
 
 
