--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,7 +13,13 @@
 @import "home";
 @import "services.scss";
 @import "contact.scss";
+@import "error.scss";
 @import "auth.scss";
 @import "change-photo.scss";
 @import "change-password.scss";
+@import 'schedules.scss';
+@import "schedules-time-options.scss";
+@import "schedules-service.scss";
+
+
 
