--- a/assets/sass/mixin.scss
+++ b/assets/sass/mixin.scss
@@ -60,7 +60,7 @@
 @mixin button-red {
     @include button;
     background-color: var(--red);
-    color: var(--white-0);
+    color: var(--white);
     &:hover {
         background-color: var(--red-hover);
     }
