Dia 4 Projeto Ferrari

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,7 +10,6 @@
 @import "header.scss";
 @import "footer.scss";
 @import "alert.scss";
-@import "home";
 @import "services.scss";
 @import "contact.scss";
 @import "error.scss";
@@ -20,6 +19,9 @@
 @import 'schedules.scss';
 @import "schedules-time-options.scss";
 @import "schedules-service.scss";
+@import "schedules-sumary.scss";
+@import "schedules-payments.scss";
+@import "resume.scss";
 
 
 
