--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -319,6 +319,98 @@ header.page-title hr {
   height: calc(100vh - 140px);
   overflow: auto;
 }
+.page aside {
+  width: 100%;
+  position: fixed;
+  z-index: 2;
+  right: 0;
+  bottom: 80px;
+  height: 50px;
+  background-color: var(--gray-12);
+  border-bottom: var(--gray-3) 1px solid;
+  flex-direction: column;
+  transition: all 0.2s ease-in-out;
+}
+.page aside header {
+  font-size: 32px;
+  color: var(--dark-0);
+  height: 130px;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.page aside section {
+  padding: 0 var(--space);
+  display: none;
+  flex: 1;
+  max-height: calc(100vh - 339px);
+  overflow-y: auto;
+}
+.page aside section table {
+  border-collapse: collapse;
+  width: 100%;
+  border-bottom: var(--gray-3) 1px solid;
+}
+.page aside section table td {
+  padding: var(--space) 0;
+  border-top: var(--gray-3) 1px solid;
+}
+.page aside section table td.price {
+  text-align: right;
+}
+.page aside footer {
+  height: 50px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--space);
+  font-size: 18px;
+  color: var(--space);
+  text-align: right;
+}
+.page aside footer .total {
+  font-weight: bold;
+  margin-left: var(--space);
+  text-align: right;
+}
+.page aside footer button {
+  min-width: 130px;
+  border: none;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: var(--border-radius);
+  background: transparent;
+  color: var(--black);
+  min-width: 50px;
+  width: 50px;
+}
+.page aside footer button:hover {
+  background-color: var(--black-10);
+}
+.page aside footer button:active {
+  background-color: var(--black-75);
+}
+.page aside footer button svg {
+  transform: rotate(0deg);
+  transition: transform 0.3s ease-in-out;
+}
+.page aside.open {
+  height: calc(100vh - 158px);
+}
+.page aside.open header, .page aside.open section {
+  display: flex;
+}
+.page aside.open footer button svg {
+  transform: rotate(180deg);
+}
 .page .page-title {
   margin: var(--space);
   width: calc(100% - calc(var(--space) * 2));
@@ -336,6 +428,11 @@ header.page-title hr {
   font-size: 23px;
   font-weight: bold;
   text-transform: uppercase;
+}
+.page > header h1 small {
+  font-size: 23px;
+  font-weight: 600;
+  display: block;
 }
 .page > main {
   margin-bottom: 80px;
@@ -503,7 +600,37 @@ header.page-title hr {
     border-top: 4px solid var(--red);
     margin: 10px 0;
   }
-
+}
+@media (min-width: 1200px) and (min-width: 1200px) {
+  .page aside, .page aside.open {
+    width: 375px;
+    height: calc(100vh - 118px);
+    bottom: 0;
+    z-index: 4;
+  }
+  .page aside header, .page aside section, .page aside.open header, .page aside.open section {
+    display: flex;
+  }
+  .page aside header, .page aside.open header {
+    height: 160px;
+  }
+  .page aside footer, .page aside.open footer {
+    height: 80px;
+  }
+  .page aside footer > div, .page aside.open footer > div {
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 22px;
+  }
+  .page aside footer > div .total, .page aside.open footer > div .total {
+    font-size: 29px;
+  }
+  .page aside footer button, .page aside.open footer button {
+    display: none;
+  }
+}
+@media (min-width: 1200px) {
   .page > header {
     justify-content: flex-start;
     padding-left: 185px;
@@ -512,6 +639,8 @@ header.page-title hr {
   .page > header h1, .page > header h2, .page > header h3, .page > header h4, .page > header h5, .page > header h6 {
     font-size: 32px;
   }
+}
+@media (min-width: 1200px) {
   .page footer.fixed {
     justify-content: flex-start;
   }
@@ -1018,117 +1147,6 @@ header.page-title hr {
   border-color: var(--success-border);
 }
 
-#home {
-  flex-direction: column;
-  margin-top: -80px;
-}
-#home > header {
-  width: 100%;
-  min-width: 320px;
-  height: 100vh;
-  background-image: url("../images/ferrari-vermelha-1200.webp");
-  background-size: cover;
-  background-position-x: 80%;
-  background-position-y: center;
-  background-repeat: no-repeat;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
-  padding: var(--space);
-}
-#home > header h1 {
-  color: var(--white);
-  font-size: 80px;
-  font-weight: bold;
-  text-align: right;
-}
-#home > header a {
-  min-width: 130px;
-  border: none;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-decoration: none;
-  outline: none;
-  cursor: pointer;
-  border-radius: var(--border-radius);
-  background: transparent;
-  color: var(--black);
-  border: var(--white) 2px solid;
-  color: var(--white);
-}
-#home > header a:hover {
-  background-color: var(--black-10);
-}
-#home > header a:active {
-  background-color: var(--black-75);
-}
-#home > header a:hover {
-  background-color: var(--white);
-  color: var(--black);
-}
-#home > header ul {
-  display: none;
-}
-#home .gallery {
-  min-width: 320px;
-  flex-direction: column;
-}
-#home .gallery figure {
-  width: 100%;
-  margin: 0;
-  margin-top: 1px;
-  position: relative;
-}
-#home .gallery figure img {
-  width: 100%;
-}
-#home .gallery figure figcaption {
-  position: absolute;
-  left: 0;
-  bottom: var(--space);
-  background-color: var(--black75);
-  color: var(--white);
-  padding: var(--space);
-}
-#home .gallery figure figcaption h2, #home .gallery figure figcaption p {
-  margin: 0;
-}
-#home .gallery figure figcaption h2 {
-  font-size: 14px;
-  font-weight: bold;
-}
-#home .gallery figure figcaption p {
-  font-size: 9px;
-  color: var(--gray-3);
-}
-
-@media (min-width: 576px) {
-  #home .gallery {
-    flex-direction: row;
-  }
-}
-@media (min-width: 1200px) {
-  #home {
-    margin-top: -100px;
-  }
-  #home hr {
-    top: 100px;
-  }
-  #home > header {
-    max-height: initial;
-    background-image: url("../images/ferrari-vermelha.webp");
-  }
-}
-@media (min-width: 1920px) {
-  #home > header {
-    background-image: url("../images/ferrari-vermelha@2x.webp");
-  }
-}
 #service {
   margin-top: var(--space);
   flex-direction: column;
@@ -1763,6 +1781,125 @@ header.page-title hr {
 }
 #schedules-services .options label .content .price {
   font-weight: bold;
+}
+
+#schedules-sumary form {
+  margin-top: var(--space);
+}
+
+#schedules-payment {
+  position: relative;
+}
+#schedules-payment > header {
+  height: 260px;
+  min-height: 260px;
+  position: relative;
+}
+#schedules-payment > header h1 {
+  display: none;
+}
+#schedules-payment > main {
+  align-items: center;
+}
+#schedules-payment > main form {
+  max-width: 100%;
+}
+#schedules-payment > main form .form-creditcard {
+  margin-top: var(--space);
+}
+#schedules-payment > main form .form-creditcard .form-fields {
+  flex-direction: column;
+  width: 100%;
+}
+#schedules-payment > main form .form-creditcard .form-fields .fields {
+  flex-direction: row;
+  justify-content: space-between;
+}
+#schedules-payment > main form .form-creditcard .form-fields .fields .field {
+  width: calc(50% - calc(var(--space) / 2));
+}
+#schedules-payment > main form .form-creditcard .form-card {
+  position: absolute;
+  top: 32px;
+  width: 100%;
+  left: 0;
+  justify-content: center;
+  perspective: 1000px;
+}
+#schedules-payment > main form .form-creditcard .form-card .faces {
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+  width: 300px;
+}
+#schedules-payment > main form .form-creditcard .form-card .faces.flipped {
+  transform: rotateY(180deg);
+}
+#schedules-payment > main form .form-creditcard .form-card .faces svg {
+  width: 300px;
+  position: absolute;
+  backface-visibility: hidden;
+}
+#schedules-payment > main form .form-creditcard .form-card .faces svg.back .name {
+  text-transform: uppercase;
+}
+#schedules-payment > main form .form-creditcard .form-card .faces .back {
+  transform: rotateY(180deg);
+}
+
+header {
+  flex-direction: column;
+}
+
+section form .bold {
+  font-weight: bold;
+}
+section form .font {
+  font-weight: 8px;
+}
+
+footer {
+  height: 50px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--space);
+  font-size: 18px;
+  color: var(--space);
+  text-align: right;
+}
+footer .total {
+  font-weight: bold;
+  margin-left: var(--space);
+  text-align: right;
+}
+footer button {
+  min-width: 130px;
+  border: none;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: var(--border-radius);
+  background: transparent;
+  color: var(--black);
+  min-width: 50px;
+  width: 50px;
+}
+footer button:hover {
+  background-color: var(--black-10);
+}
+footer button:active {
+  background-color: var(--black-75);
+}
+footer button svg {
+  transform: rotate(0deg);
+  transition: transform 0.3s ease-in-out;
 }
 
 /*# sourceMappingURL=main.css.map */
