--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,27 +1,29 @@
-@import "fonts.scss";
-@import "variables.scss";
-@import "default.scss";
-@import "loading.scss";
-@import "mixin.scss";
-@import "toast.scss";
-@import "form.scss";
-@import "page.scss";
-@import "calendar.scss";
-@import "header.scss";
-@import "footer.scss";
-@import "alert.scss";
-@import "services.scss";
-@import "contact.scss";
-@import "error.scss";
-@import "auth.scss";
-@import "change-photo.scss";
-@import "change-password.scss";
+  
+@import 'fonts.scss';
+@import 'variables.scss';
+@import 'default.scss';
+@import 'loading.scss';
+@import 'mixin.scss';
+@import 'toast.scss';
+@import 'form.scss';
+@import 'page.scss';
+@import 'calendar.scss';
+@import 'header.scss';
+@import 'footer.scss';
+@import 'alert.scss';
+@import 'home.scss';
+@import 'services.scss';
+@import 'contact.scss';
+@import 'error.scss';
+@import 'auth.scss';
+@import 'change-photo.scss';
+@import 'change-password.scss';
 @import 'schedules.scss';
-@import "schedules-time-options.scss";
-@import "schedules-service.scss";
-@import "schedules-sumary.scss";
-@import "schedules-payments.scss";
-@import "resume.scss";
+@import 'schedules-time-options.scss';
+@import 'schedules-services.scss';
+@import 'schedules-summary.scss';
+@import 'schedules-payment.scss';
+@import "schedules-complete.scss";
 
 
 
