--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -365,8 +365,7 @@ header.page-title hr {
   align-items: center;
   padding: var(--space);
   font-size: 18px;
-  color: var(--space);
-  text-align: right;
+  color: var(--dark-0);
 }
 .page aside footer .total {
   font-weight: bold;
@@ -400,7 +399,7 @@ header.page-title hr {
 }
 .page aside footer button svg {
   transform: rotate(0deg);
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .page aside.open {
   height: calc(100vh - 158px);
@@ -430,7 +429,7 @@ header.page-title hr {
   text-transform: uppercase;
 }
 .page > header h1 small {
-  font-size: 23px;
+  font-size: 14px;
   font-weight: 600;
   display: block;
 }
@@ -594,14 +593,7 @@ header.page-title hr {
   header.page-title h1, header.page-title h2, header.page-title h3, header.page-title h4, header.page-title h5, header.page-title h6 {
     font-size: 30px;
   }
-  header.page-title hr {
-    width: 68px;
-    border: none;
-    border-top: 4px solid var(--red);
-    margin: 10px 0;
-  }
-}
-@media (min-width: 1200px) and (min-width: 1200px) {
+
   .page aside, .page aside.open {
     width: 375px;
     height: calc(100vh - 118px);
@@ -629,22 +621,18 @@ header.page-title hr {
   .page aside footer button, .page aside.open footer button {
     display: none;
   }
-}
-@media (min-width: 1200px) {
   .page > header {
     justify-content: flex-start;
     padding-left: 185px;
     min-height: 160px;
   }
-  .page > header h1, .page > header h2, .page > header h3, .page > header h4, .page > header h5, .page > header h6 {
+  .page > header h1 {
     font-size: 32px;
   }
-}
-@media (min-width: 1200px) {
   .page footer.fixed {
     justify-content: flex-start;
   }
-  .page footer.fixed button + button, .page footer.fixed a + a, .page footer.fixed a + button {
+  .page footer.fixed button + button, .page footer.fixed a + a, .page footer.fixed button + a, .page footer.fixed a + button {
     margin-right: var(--space);
   }
   .page footer.fixed button, .page footer.fixed a {
@@ -1147,6 +1135,130 @@ header.page-title hr {
   border-color: var(--success-border);
 }
 
+#home {
+  flex-direction: column;
+  margin-top: -80px;
+}
+#home > header {
+  width: 100%;
+  min-width: 320px;
+  min-height: 675px;
+  height: 100vh;
+  background-image: url("../images/ferrari-vermelha-1200.webp");
+  background-size: cover;
+  background-position-x: 80%;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  padding: var(--space);
+}
+#home > header h1 {
+  color: var(--white);
+  font-size: 80px;
+  font-weight: bold;
+  text-align: right;
+}
+#home > header a {
+  min-width: 130px;
+  border: none;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: var(--border-radius);
+  background: transparent;
+  color: var(--black);
+  border: var(--white) 2px solid;
+  color: var(--white);
+}
+#home > header a:hover {
+  background-color: var(--black-10);
+}
+#home > header a:active {
+  background-color: var(--black-75);
+}
+#home > header a:hover {
+  background-color: var(--white);
+  color: var(--black);
+}
+#home > header ul {
+  display: none;
+}
+#home .gallery {
+  min-width: 320px;
+  flex-direction: column;
+}
+#home .gallery figure {
+  width: 100%;
+  margin: 0;
+  margin-top: 1px;
+  position: relative;
+}
+#home .gallery figure img {
+  width: 100%;
+}
+#home .gallery figure figcaption {
+  position: absolute;
+  left: 0;
+  bottom: var(--space);
+  background-color: var(--black-75);
+  color: var(--white);
+  padding: var(--space);
+}
+#home .gallery figure figcaption h2, #home .gallery figure figcaption p {
+  margin: 0;
+}
+#home .gallery figure figcaption h2 {
+  font-size: 14px;
+  font-weight: bold;
+}
+#home .gallery figure figcaption p {
+  font-size: 9px;
+  color: var(--gray-3);
+}
+
+@media (min-width: 576px) {
+  #home .gallery {
+    flex-direction: row;
+  }
+  #home > header ul {
+    display: flex;
+    color: var(--white);
+    font-size: 30px;
+    margin: 0;
+    width: 440px;
+    padding: unset;
+    justify-content: space-around;
+  }
+  #home > header h1 {
+    margin-top: unset;
+  }
+}
+@media (min-width: 1200px) {
+  #home {
+    margin-top: -100px;
+  }
+  #home hr {
+    top: 100px;
+  }
+  #home > header {
+    max-height: initial;
+    background-image: url("../images/ferrari-vermelha.webp");
+  }
+}
+@media (min-width: 1920px) {
+  #home > header {
+    background-image: url("../images/ferrari-vermelha@2x.webp");
+  }
+}
 #service {
   margin-top: var(--space);
   flex-direction: column;
@@ -1846,33 +1958,54 @@ header.page-title hr {
   transform: rotateY(180deg);
 }
 
-header {
-  flex-direction: column;
+@media (min-width: 1200px) {
+  #schedules-payment {
+    position: static;
+  }
+  #schedules-payment > header {
+    height: 160px;
+    min-height: 160px;
+  }
+  #schedules-payment > header h1 {
+    display: block;
+  }
+  #schedules-payment > main {
+    align-items: flex-start;
+  }
+  #schedules-payment > main form {
+    max-width: 900px;
+    justify-content: space-between;
+  }
+  #schedules-payment > main form .form-creditcard .form-card {
+    position: static;
+    justify-content: center;
+    padding-left: var(--space);
+  }
+  #schedules-payment > main form .form-creditcard .form-card .faces {
+    width: 100%;
+    margin-top: -17px;
+  }
+  #schedules-payment > main form .form-creditcard .form-card .faces.fliped {
+    transform: translateX(-76px) rotateY(180deg);
+  }
+  #schedules-payment > main form .form-creditcard .form-card .faces svg {
+    width: 340px;
+  }
 }
-
-section form .bold {
-  font-weight: bold;
+#schedules-complete main p {
+  margin: var(--space);
+  font-size: 22px;
+  color: var(--gray-0);
+  margin-bottom: var(--space);
 }
-section form .font {
-  font-weight: 8px;
+#schedules-complete main p small {
+  display: block;
+  font-size: 16px;
 }
-
-footer {
-  height: 50px;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: var(--space);
-  font-size: 18px;
-  color: var(--space);
-  text-align: right;
+#schedules-complete main footer.fixed {
+  justify-content: center;
 }
-footer .total {
-  font-weight: bold;
-  margin-left: var(--space);
-  text-align: right;
-}
-footer button {
+#schedules-complete main footer.fixed a {
   min-width: 130px;
   border: none;
   height: 50px;
@@ -1888,18 +2021,27 @@ footer button {
   border-radius: var(--border-radius);
   background: transparent;
   color: var(--black);
-  min-width: 50px;
-  width: 50px;
+  background-color: var(--green);
+  color: var(--white);
+  padding: 0 var --space;
 }
-footer button:hover {
+#schedules-complete main footer.fixed a:hover {
   background-color: var(--black-10);
 }
-footer button:active {
+#schedules-complete main footer.fixed a:active {
   background-color: var(--black-75);
 }
-footer button svg {
-  transform: rotate(0deg);
-  transition: transform 0.3s ease-in-out;
+#schedules-complete main footer.fixed a:hover {
+  background-color: var(--green-hover);
+}
+#schedules-complete main footer.fixed a:active {
+  background-color: var(--green-active);
+}
+
+@media (min-width: 1200px) {
+  #schedules-complete main footer.fixed {
+    justify-content: flex-start;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
