--- a/assets/sass/page.scss
+++ b/assets/sass/page.scss
@@ -1,4 +1,3 @@
-
 header {
     &.page-title {
         display: flex;
@@ -12,14 +11,13 @@ header {
             font-weight: 600;
         }
         hr {
-            width: 68px;
+            width:68px;
             border: none;
             border-top: 4px solid var(--red);
             margin: 10px 0;
         }
     }
 }
-
 
 .page {
     flex-direction: column;
@@ -43,7 +41,6 @@ header {
             justify-content: center;
             align-items: center;
             display: none;
-
         }
         section {
             padding: 0 var(--space);
@@ -63,7 +60,6 @@ header {
                     }
                 }
             }
-
         }
         footer {
             height: 50px;
@@ -72,22 +68,19 @@ header {
             align-items: center;
             padding: var(--space);
             font-size: 18px;
-            color: var(--space);
-            text-align: right;
+            color: var(--dark-0);
             .total {
                 font-weight: bold;
                 margin-left: var(--space);
                 text-align: right;
             }
-
-        
             button {
                 @include button;
                 min-width: 50px;
                 width: 50px;
                 svg {
                     transform: rotate(0deg);
-                    transition: transform .3s ease-in-out;
+                    transition: all .3s ease-in-out;
                 }
             }
         }
@@ -104,11 +97,10 @@ header {
                 }
             }
         }
-
     }
     .page-title {
-        margin: var(--space) ;
-        width: calc(100% - calc(var(--space) * 2))
+        margin: var(--space);
+        width: calc(100% - calc(var(--space) * 2));
     }
     > header {
         width: 100%;
@@ -118,13 +110,12 @@ header {
         justify-content: center;
         align-items: center;
         margin-top: 18px;
-        
-        h1{
+        h1 {
             font-size: 23px;
             font-weight: bold;
             text-transform: uppercase;
             small {
-                font-size: 23px;
+                font-size: 14px;
                 font-weight: 600;
                 display: block;
             }
@@ -136,7 +127,7 @@ header {
         .toast {
             position: fixed;
             bottom: 0;
-            left:0;
+            left: 0;
             z-index: 3;
             &.open {
                 transform: translateY(-80px);
@@ -159,7 +150,6 @@ header {
         }
         button[type=submit], a.black {
             @include button-black;
-
         }
     }
     &.blue {
@@ -169,7 +159,7 @@ header {
         footer.fixed {
             button[type=submit], a.black {
                 @include button-blue;
-            }
+            } 
         }
     }
     &.green {
@@ -179,83 +169,65 @@ header {
         footer.fixed {
             button[type=submit], a.black {
                 @include button-green;
-            }
+            } 
         }
     }
 }
-@media (min-width: 1200px) { 
+
+@media (min-width: 1200px) {
     header {
         &.page-title {
-            h1, h2, h3, h4, h5, h6 {  
+            h1, h2, h3, h4, h5, h6 {
                 font-size: 30px;
-                
-            }
-            hr {
-                width: 68px;
-                border: none;
-                border-top: 4px solid var(--red);
-                margin: 10px 0;
             }
         }
     }
-    
     .page {
-        @media (min-width: 1200px){
-    
-            aside, aside.open {
-                width: 375px ;
-                height: calc(100vh - 118px);
-                bottom: 0;
-                z-index: 4;
-                header, section {
-                    display: flex;
-        
-                }
-                header {
-                    height: 160px;
-                }
-                footer {
-                    height: 80px;
-                    > div {
-                        width: 100%;
-                        justify-content: space-between;
-                        align-items: center;
-                        font-size: 22px;
-                        .total {
-                            font-size: 29px;
-        
-                        }
-        
-                    }
-                    button {
-                        display: none;
-                    }
-                }
-        
+        aside, aside.open {
+            width: 375px;
+            height: calc(100vh - 118px);
+            bottom: 0;
+            z-index: 4;
+            header, section {
+                display: flex;
             }
-            
+            header {
+                height: 160px;
+            }
+            footer {
+                height: 80px;
+                > div {
+                    width: 100%;
+                    justify-content: space-between;
+                    align-items: center;
+                    font-size: 22px;
+                    .total {
+                       font-size: 29px; 
+                    }
+                }
+                button {
+                    display: none;
+                }
+            }
         }
-        
         > header {
             justify-content: flex-start;
             padding-left: 185px;
             min-height: 160px;
-            h1, h2, h3, h4, h5, h6 {
+            h1 {
                 font-size: 32px;
             }
         }
         footer.fixed {
             justify-content: flex-start;
-            button + button, a + a, a + button {
+            button + button, a + a, button + a, a + button {
                 margin-right: var(--space);
             }
             button, a {
-                order : 1;
+                order: 1;
                 &:first-child {
                     order: 2;
-
                 }
-
             }
         }
     }
